<resources>
    <string name="app_name">Travelmantics</string>
    <string name="title_hint">Deal Title</string>
    <string name="price_hint">Price</string>
    <string name="description_hint">Description</string>
    <string name="save_menu">save</string>
    <string name="delete_menu">Delete Deal</string>
    <string name="deal_image_content_description">Image of Travel Deal</string>
    <string name="button_upload_image">Upload Image</string>
</resources>
